; ModuleID = '/home/carl/AnghaBench/sumatrapdf/ext/lcms2/utils/jpgicc/extr_jpgicc.c_CreatePCS2ITU_ICC.c'
source_filename = "/home/carl/AnghaBench/sumatrapdf/ext/lcms2/utils/jpgicc/extr_jpgicc.c_CreatePCS2ITU_ICC.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@GRID_POINTS = common dso_local global i32 0, align 4
@cmsAT_BEGIN = common dso_local global i32 0, align 4
@PCS2ITU = common dso_local global i32 0, align 4
@cmsSigBToA0Tag = common dso_local global i32 0, align 4
@cmsSigLabData = common dso_local global i32 0, align 4
@cmsSigColorSpaceClass = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32* ()* @CreatePCS2ITU_ICC to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32* @CreatePCS2ITU_ICC() #0 {
  %1 = alloca i32*, align 8
  %2 = alloca i32*, align 8
  %3 = alloca i32*, align 8
  %4 = alloca i32*, align 8
  %5 = call i32* @cmsPipelineAlloc(i32 0, i32 3, i32 3)
  store i32* %5, i32** %3, align 8
  %6 = load i32*, i32** %3, align 8
  %7 = icmp eq i32* %6, null
  br i1 %7, label %8, label %9

8:                                                ; preds = %0
  store i32* null, i32** %1, align 8
  br label %46

9:                                                ; preds = %0
  %10 = load i32, i32* @GRID_POINTS, align 4
  %11 = call i32* @cmsStageAllocCLut16bit(i32 0, i32 %10, i32 3, i32 3, i32* null)
  store i32* %11, i32** %4, align 8
  %12 = load i32*, i32** %4, align 8
  %13 = icmp eq i32* %12, null
  br i1 %13, label %14, label %15

14:                                               ; preds = %9
  store i32* null, i32** %1, align 8
  br label %46

15:                                               ; preds = %9
  %16 = load i32*, i32** %3, align 8
  %17 = load i32, i32* @cmsAT_BEGIN, align 4
  %18 = load i32*, i32** %4, align 8
  %19 = call i32 @cmsPipelineInsertStage(i32* null, i32* %16, i32 %17, i32* %18)
  %20 = load i32*, i32** %4, align 8
  %21 = load i32, i32* @PCS2ITU, align 4
  %22 = call i32 @cmsStageSampleCLut16bit(i32* null, i32* %20, i32 %21, i32* null, i32 0)
  %23 = call i32* @cmsCreateProfilePlaceholder(i32 0)
  store i32* %23, i32** %2, align 8
  %24 = load i32*, i32** %2, align 8
  %25 = icmp eq i32* %24, null
  br i1 %25, label %26, label %29

26:                                               ; preds = %15
  %27 = load i32*, i32** %3, align 8
  %28 = call i32 @cmsPipelineFree(i32* null, i32* %27)
  store i32* null, i32** %1, align 8
  br label %46

29:                                               ; preds = %15
  %30 = load i32*, i32** %2, align 8
  %31 = load i32, i32* @cmsSigBToA0Tag, align 4
  %32 = load i32*, i32** %3, align 8
  %33 = call i32 @cmsWriteTag(i32* null, i32* %30, i32 %31, i32* %32)
  %34 = load i32*, i32** %2, align 8
  %35 = load i32, i32* @cmsSigLabData, align 4
  %36 = call i32 @cmsSetColorSpace(i32* null, i32* %34, i32 %35)
  %37 = load i32*, i32** %2, align 8
  %38 = load i32, i32* @cmsSigLabData, align 4
  %39 = call i32 @cmsSetPCS(i32* null, i32* %37, i32 %38)
  %40 = load i32*, i32** %2, align 8
  %41 = load i32, i32* @cmsSigColorSpaceClass, align 4
  %42 = call i32 @cmsSetDeviceClass(i32* null, i32* %40, i32 %41)
  %43 = load i32*, i32** %3, align 8
  %44 = call i32 @cmsPipelineFree(i32* null, i32* %43)
  %45 = load i32*, i32** %2, align 8
  store i32* %45, i32** %1, align 8
  br label %46

46:                                               ; preds = %29, %26, %14, %8
  %47 = load i32*, i32** %1, align 8
  ret i32* %47
}

declare dso_local i32* @cmsPipelineAlloc(i32, i32, i32) #1

declare dso_local i32* @cmsStageAllocCLut16bit(i32, i32, i32, i32, i32*) #1

declare dso_local i32 @cmsPipelineInsertStage(i32*, i32*, i32, i32*) #1

declare dso_local i32 @cmsStageSampleCLut16bit(i32*, i32*, i32, i32*, i32) #1

declare dso_local i32* @cmsCreateProfilePlaceholder(i32) #1

declare dso_local i32 @cmsPipelineFree(i32*, i32*) #1

declare dso_local i32 @cmsWriteTag(i32*, i32*, i32, i32*) #1

declare dso_local i32 @cmsSetColorSpace(i32*, i32*, i32) #1

declare dso_local i32 @cmsSetPCS(i32*, i32*, i32) #1

declare dso_local i32 @cmsSetDeviceClass(i32*, i32*, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
